@@ -8,18 +8,18 @@ DIST harfbuzz-0.9.18.tar.bz2 902395 SHA256 fef0fbbc6d6492cb4074a5e26a699d87d88be
 DIST harfbuzz-0.9.20.tar.bz2 1030152 SHA256 83384fa03fbcf0c5d8203374bae2efef7dcac650f428d2216d8a6d2251dbbc67 SHA512 2473885cf77f2353a28779f55aa5eb323190fd5432d2bba0026a0b337986d293e8a38d7a5bd6c68e7bc3843e6ad3ed3a592d12b896fc28ff7119c67a8c7d6f45 WHIRLPOOL 0a35408913a042a3055f30b743d4e278b903254e762a6daa37f8955aa9907480b670120a6520e7b2487cfcc00959d43930c845293d8a674826fe90f8c2d3f18f
 EBUILD harfbuzz-0.9.12.ebuild 1686 SHA256 bb37abe8e6425b37dee64cd95e4a0e31b6ab8bf64ba0085b3cfeb422b620ce0c SHA512 9e5da3fe6be6e95a3ff5cd968e09dc13434e5e1591eee8f1ddc05552be59ce7b09a6b3d3d3d6522197be1213d86fcd3fe5894a3c3514d746297d4615227d3e3b WHIRLPOOL a36fe247b2f54dbc8b5db2c3344e042f18d7f2e52679fb94784e870cc6309e9d86e61d9f0a9ab729da82325c0bd34c274030c269013cce6daa5efb52de5c7bb9
 EBUILD harfbuzz-0.9.18-r1.ebuild 1946 SHA256 e8baab01829217a046eb369a565b601494b202fdc402322dc5b1247982a5e47c SHA512 8b16d82a5a52cceae19e6c5380d8e7c24de7a252202d7804b67cad4fbca13697e859d7b330e56a095c4c5be10ad5e3311bbe03af66c98c942b2a2224431ad971 WHIRLPOOL 2f7df3064047b4e3558b2f478bb1a17a08707e86e3e9f6a8cb52fea01a9a15f865851aa23520204019d6b299b7842d6e9ccb3b6482fdebdd17b5b6d3d1bada36
-EBUILD harfbuzz-0.9.20.ebuild 2305 SHA256 c8d2025ac47bd64696ae1b210f2e080fe023895531fe86faa07e3679cdf0f578 SHA512 fcc563f443e744b1a40657bca400a5091352c68861e261003c8e1870e7303db07c433046aa0e4862f6baf1b58962cd3ffdbe35b60b8350d8e665d6d191c07b8a WHIRLPOOL 28ccbc4871a5433dfe23af219e0714de4514993a7283e52036078744f59eb0d9672043033792216d2a094395d079b04717a34527961f76daf18358cc62857483
-EBUILD harfbuzz-9999.ebuild 2304 SHA256 19dddc8035970cc56ca2f8c464425d9b7df42381833e05d65410cdd8e88de2d1 SHA512 6df85e4c7c32ea9ff0650336f419ea21a89be52297347be6efe7ffe5af65fb1226059f7218c4abe2321f2dd0c14554c0a244fca088af46d6aa77ce312561982d WHIRLPOOL 11b70dcbc3eebc5b2856e824083f15bf4a9575d0c847672b41af7cb3c03dd0407bf687082b29e02bed3c902aebe9f85998b71b66134fdb52c9367de9ff44db6f
-MISC ChangeLog 7467 SHA256 043fa4bebc394d964dc5ee1647643b32f28ab8755e6f20c6a6b256f7fd522e5c SHA512 bde392085100527e9dc177f4d8c23fe3a254d0b99c02099726de45874abd29a8e0020cfb049f7897556b44b7cff466ead4522f7fea572d6d219c784d10a982c5 WHIRLPOOL d31052ffb7e636ad94bf18df21d67ca91467d3d64e37556b3d98dd7ea968296273f511aee10454769ca8396bf71b983a9078fb9088c63faa9a356d1dc564e789
+EBUILD harfbuzz-0.9.20.ebuild 2358 SHA256 d3bceb126cbfc6647d8654d134d9ae4a692e9c15a3d10d946290bdaa873c7ba9 SHA512 9256e211027d7705461be33caa6e7233b5212363d0c356204f3e3340fdbda39cb178d599daeed11929a8067081b833e4fd05a47ea49ad89fc3410f2a3548807d WHIRLPOOL abecc4a113dc088297ff18461178bc1797d896b4816d32471f9f534161e7988559fba95f9b9ff67ff7121575a523daa5f3021c8a88bd7da92cf4a5a8f4f8d0c0
+EBUILD harfbuzz-9999.ebuild 2357 SHA256 ad29faafdd2bbb8692432da1a78d7f54935eab823b64387720330fe7984e3c85 SHA512 eed6758f1277ec2aa7eda37d2d80d45faa1f9ea65ab2af0ed411f87edafe066fa23ff88d811d4058884b183fde41579f17fb70f74becae5ee122bce338cc2f14 WHIRLPOOL 9f28cee353809842c654c393b57afd9f80a9a40118ba0d2861eb3ef3ecdb61cd2ff959dc3ea7225988f03702bce1c6ab75c2d763c20da27091c2c0353b54ed7a
+MISC ChangeLog 7655 SHA256 1a9fa6e27b169ddff4a78e3a67c90ad28fa7f1c4f7ab5d85feb9bed8b894e249 SHA512 9585cc1df503aae82d37a76051e3799e30c1608135c9d384eb18e23867eda583cb4df7d1a9ec189f6fba871e084d250f9e27a960c5f749dfc1c54c8fcb5657aa WHIRLPOOL 8db613657cfc54d169fcbb187428814906126a40af0430a34aaa924d02b295c17f1669172a5f67f4d60d3f8898a9ba00970515d8acc69ab1db730b0c24708eda
 MISC metadata.xml 348 SHA256 ab40ba306c3499687d57b89247a77e7e8093c88196e6c0fb2333f014ee37c3da SHA512 057542963b2698ddd474970f6b49a6b99c5ff1982c29d7495b6ea05a8bc5266007e328b6658c13052cad8cd2b1c44e2bd6d60ef3e4ef43755c6b4c785b908485 WHIRLPOOL f1799f9bedccd73989ce42f234a28222de692f147553bf4a8bdf154bb544f22ead4ade109700fea7785747d27adbcf30c5543d435f3584f43817b1ed1111b1a6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.21 (GNU/Linux)
 
-iQEcBAEBCAAGBQJSLyQ+AAoJEJ0WA1zPCt1h3ogIAJpx3grrc+BILGY4xCNnpwSD
-xcVkw9LcUdUbwV8qkU+VFhyySZAPAPhZG4T/jbrndh+QhfSXzavCjuXZq9tQWq/W
-LeKzilEkt6a8QPKTTk+oMMklgD6ciLlEzCocws8J3SupHl2TVY5rhlDJuWhHtDiQ
-VtPnh3injF1rx3+f0iKUe1Fr+JVAS3FaLub6HCfSGqIpvaM0UXDy5q7XCkl1NT7A
-zZTOz4FyFj84K+I3Z0D4axBiys1a9eNiXJneXi8eMQJzzxKhHg25g+uiUpl0toZy
-M386wy/b5bGSp8KTjv2o5uotC0zhTdnXN17AcG8HUn4jgsTFCe2Fyn5+eN51ECU=
-=wcFf
+iQEcBAEBCAAGBQJSL9sAAAoJEJ0WA1zPCt1h2aMH/Rxemed0Kjkd7SfXdvBcJBGB
+AJoZqePqMgsU6qe0HI+4L60OvKyi86EjDSQtJJhElQ6+bCP5G++3TdLhQA4Pq4j/
+F5w2RzWC+hFVDkQMS9v0dXteOPG259PHXhfml3RGhDUqgSDhfQc2OI/OddJSPWFv
+XGkBnpQoTyNCxkMfjhhUWs2Wyd2sHtQFSnzuKbxlzLVz5fdxtV1V6E62o/bHN6NH
+TuOxgsK3ciXXk3sbHgVqH/7SdxQES+00qYNHVIzk+Kc2r9pnyhcuxjF9A9WwJZQi
+iTTUemio6w5zAopHeM0OnpmlEReCBtq7ET+4+Oyzv0ZDQMhkzdKrnzNyqRosY7M=
+=YKYd
 -----END PGP SIGNATURE-----
