@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/harfbuzz/harfbuzz-9999.ebuild,v 1.17 2013/09/10 13:52:46 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/harfbuzz/harfbuzz-9999.ebuild,v 1.18 2013/09/11 02:52:32 tetromino Exp $
 
 EAPI=5
 
@@ -31,12 +31,14 @@ RDEPEND="
 "
 DEPEND="${RDEPEND}
 	dev-util/gtk-doc-am
-	dev-util/ragel
 	virtual/pkgconfig
 "
 # eautoreconf requires gobject-introspection-common
+# ragel needed if regenerating *.hh files from *.rl
 [[ ${PV} = 9999 ]] && DEPEND="${DEPEND}
-	>=dev-libs/gobject-introspection-common-1.32"
+	>=dev-libs/gobject-introspection-common-1.32
+	dev-util/ragel
+"
 
 src_prepare() {
 	if [[ ${CHOST} == *-darwin* || ${CHOST} == *-solaris* ]] ; then
