@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/harfbuzz
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/harfbuzz/ChangeLog,v 1.46 2013/09/10 13:52:46 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/harfbuzz/ChangeLog,v 1.47 2013/09/11 02:52:32 tetromino Exp $
+
+  11 Sep 2013; Alexandre Rostovtsev <tetromino@gentoo.org>
+  harfbuzz-0.9.20.ebuild, harfbuzz-9999.ebuild:
+  ragel is not needed for non-live ebuilds (bug #484518, thanks to Lev Babiev).
 
   10 Sep 2013; Alexandre Rostovtsev <tetromino@gentoo.org>
   harfbuzz-0.9.20.ebuild, harfbuzz-9999.ebuild:
